--- a/src/app/administration/presentation/pages/officers-manage/officers-manage.component.html
+++ b/src/app/administration/presentation/pages/officers-manage/officers-manage.component.html
@@ -19,7 +19,7 @@
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef>Nombre</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.fullname | titlecase }}
+        {{ element.fullName | titlecase }}
       </td>
     </ng-container>
 
