correcion edicion usuario

--- a/src/app/administration/presentation/dialogs/account-dialog/account-dialog.component.html
+++ b/src/app/administration/presentation/dialogs/account-dialog/account-dialog.component.html
@@ -65,6 +65,7 @@
           </div>
           <mat-checkbox formControlName="isActive"> Habilitado </mat-checkbox>
         </div>
+        <pre>{{userForm.value|json}}</pre>
         <div class="flex justify-end">
           <button mat-button matStepperPrevious>Atras</button>
         </div>
