--- a/src/app/communications/presentation/pages/folders/folders.component.html
+++ b/src/app/communications/presentation/pages/folders/folders.component.html
@@ -30,7 +30,7 @@
         <img src="images/icons/alert-folder.png" alt="Folder image" />
       </div>
 
-      <div class="truncate w-full text-center font-medium">Sin carpeta</div>
+      <div class="truncate w-full text-center font-medium">ARCHIVADOS</div>
     </div>
     @for (folder of filteredFolders(); track $index) {
     <div
