--- a/src/app/administration/presentation/pages/accounts-manage/accounts-manage.component.html
+++ b/src/app/administration/presentation/pages/accounts-manage/accounts-manage.component.html
@@ -38,15 +38,15 @@
 
     <select-search
       title="Institucion"
-      [value]="selectedInstition()"
+      [value]="selectedInstitution()"
       [items]="institutions()"
-      (onSelect)="selectedInstition.set($event)"
+      (onSelect)="selectedInstitution.set($event)"
     />
     <select-search
       title="Dependencia"
-      [value]="selectedDependecy()"
+      [value]="selectedDependency()"
       [items]="dependencies.value() ?? []"
-      (onSelect)="selectedDependecy.set($event)"
+      (onSelect)="selectedDependency.set($event)"
     />
 
     <div class="flex justify-end gap-x-2 mt-2">
@@ -82,10 +82,17 @@
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element" class="w-8">
         @if ( element.isVisible) {
-        <mat-icon color="primary">visibility</mat-icon>
+        <mat-icon class="text-blue-500">visibility</mat-icon>
         } @else {
-        <mat-icon color="warn">visibility_off</mat-icon>
+        <mat-icon class="text-orange-500">visibility_off</mat-icon>
         }
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="login">
+      <th mat-header-cell *matHeaderCellDef>Login</th>
+      <td mat-cell *matCellDef="let element" class="w-8">
+       {{element.user.login}}
       </td>
     </ng-container>
 
@@ -130,9 +137,9 @@
             <mat-icon>edit</mat-icon>
             <span>Editar</span>
           </button>
-          <button mat-menu-item (click)="resetCrendentials(element)">
+          <button mat-menu-item (click)="resetPassword(element)">
             <mat-icon>lock_reset</mat-icon>
-            <span>Restablecer credenciales</span>
+            <span>Restablecer contraseña</span>
           </button>
         </mat-menu>
       </td>
