--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -6,7 +6,7 @@
   </button>
 </mat-toolbar>
 
-<div class="p-2 sm:p-6">
+<div class="p-2 sm:p-4">
   <div class="flex justify-end mb-2">
     <div class="w-full sm:w-1/4 h-[54px]">
       <search-input
@@ -30,9 +30,9 @@
     </ng-container>
     <ng-container matColumnDef="code">
       <th mat-header-cell *matHeaderCellDef>Alterno</th>
-      <td mat-cell *matCellDef="let element" [id]="element._id" class="sm:w-48">
+      <td mat-cell *matCellDef="let element" [id]="element.id" class="sm:w-48">
         <a
-          [routerLink]="['../internal', element.group, element._id]"
+          [routerLink]="['../internal', element.group, element.id]"
           class="text-blue-600"
         >
           {{ element.code }}
@@ -95,10 +95,9 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell p-3" colspan="6">SIN RESULTADOS.</td>
+       <td class="mat-cell p-3"[attr.colspan]="displayedColumns.length">No se encontraron resultados</td>
     </tr>
   </table>
-  @if (datasize() > limit()){
   <mat-paginator
     showFirstLastButtons
     [length]="datasize()"
@@ -106,5 +105,4 @@
     [pageSize]="limit()"
     (page)="onPageChange($event)"
   />
-  }
 </div>
