--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -64,7 +64,7 @@
       [opened]="true"
       class="sidenav"
     >
-      <navigation-list [menu]="menu" />
+      <sidenav-menu [menu]="menu" />
     </mat-sidenav>
 
     <mat-sidenav-content>
