--- a/src/app/presentation/pages/groupware/clients/clients.component.html
+++ b/src/app/presentation/pages/groupware/clients/clients.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<!-- <mat-toolbar>
   <span>Groupware</span>
   <span class="toolbar-spacer"></span>
 </mat-toolbar>
@@ -25,4 +25,4 @@
     </mat-list-item>
     }
   </mat-list>
-</div>
+</div> -->
