--- a/src/app/layout/presentation/pages/settings/settings.component.html
+++ b/src/app/layout/presentation/pages/settings/settings.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
               <dt class="text-sm/6 font-medium">Contraseña</dt>
-              <dd class="mt-1 sm:col-span-2 sm:mt-0 space-y-4 sm:max-w-[500px]">
+              <dd class="mt-1 sm:col-span-2 sm:mt-0 space-y-6 sm:max-w-[500px]">
                 <mat-form-field appearance="outline">
                   <mat-label>Nueva contraseña</mat-label>
                   <input
@@ -83,14 +83,14 @@
         </form>
       </div>
       @if(isAlertShowing()){
-      <!-- <div class="py-4">
+      <div class="mb-4">
         <alert-message
           severity="success"
           title="Cambios guardados"
           [life]="3000"
-          (close)="isAlertShowing.set(false)"
+          (onClose)="isAlertShowing.set(false)"
         />
-      </div> -->
+      </div>
       }
       <button
         mat-flat-button
