--- a/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
+++ b/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
@@ -109,7 +109,7 @@
   </mat-accordion>
 
   @if (isLoading()){
-    <div class="flex flex-col gap-y-1">
+    <div class="flex flex-col gap-y-1 mt-4">
       <p class="text-xl">Generando reporte....</p>
       <mat-progress-bar mode="indeterminate" />
     </div>
