--- a/src/app/reports/presentation/pages/report-efficiency/report-efficiency.component.html
+++ b/src/app/reports/presentation/pages/report-efficiency/report-efficiency.component.html
@@ -73,7 +73,7 @@
 
 
   @if (isLoading()){
-  <div class="flex flex-col gap-y-1">
+  <div class="flex flex-col gap-y-1 mt-4">
     <p class="text-xl">Generando reporte....</p>
     <mat-progress-bar mode="indeterminate" />
   </div>
