--- a/src/app/reports/presentation/pages/report-segments/report-segments.component.html
+++ b/src/app/reports/presentation/pages/report-segments/report-segments.component.html
@@ -54,7 +54,7 @@
       </form>
 
       @if(isLoading()){
-        <div class="flex flex-col gap-y-1">
+        <div class="flex flex-col gap-y-1 mt-4">
           <p class="text-xl">Generando reporte....</p>
           <mat-progress-bar mode="indeterminate" />
         </div>
