--- a/src/app/reports/presentation/pages/report-unit/report-unit.component.html
+++ b/src/app/reports/presentation/pages/report-unit/report-unit.component.html
@@ -78,7 +78,7 @@
   </mat-accordion>
 
   @if (isLoading()){
-    <div class="flex flex-col gap-y-1">
+    <div class="flex flex-col gap-y-1 mt-4">
         <p class="text-xl">Generando reporte....</p>
         <mat-progress-bar mode="indeterminate" />
     </div>
