--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,6 @@ html {
   height: 100%;
 }
 
-
 body {
   height: 100%;
   margin: 0;
@@ -29,6 +28,7 @@ body {
   background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
 }
+
 .overlay {
   background: var(--mat-sys-surface-container-low);
   box-shadow: var(--mat-sys-level2);
@@ -51,4 +51,8 @@ mat-form-field {
 
 .mdc-notched-outline__notch {
   border-right: none;
+}
+
+.mat-mdc-row:hover {
+  background-color: var(--mat-sys-surface-container);
 }
